feature: GHB-2 / add questions section

--- a/src/app/home-page/home/home.component.html
+++ b/src/app/home-page/home/home.component.html
@@ -1,3 +1,5 @@
 <div class="home_container">
-    <app-questions-section></app-questions-section>
+    <div class="home_block">
+        <app-questions-section></app-questions-section>
+    </div>
 </div>
